[metadata]
name = njord
version = 0.0.3
author = admjs
author_email = ajs@sent.com
description = A Python package for programmatically controlling NordVPN.
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/admjs/njord
project_urls =
    Bug Tracker = https://github.com/admjs/njord/-/issues
    repository = https://github.com/admjs/njord
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Environment :: MacOS X     
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Unix Shell
    Natural Language :: English
    Topic :: Internet :: WWW/HTTP
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    python-dotenv
    psutil